# surfkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  pytest.ini
.data/: prompts.db  skills.db  tasks.db  threads.db
.github/workflows/: lint-check.yml
scripts/: lint.py
surfkit/: __init__.py  agent.py  auth.py  client.py  config.py  env.py  env_opts.py  hub.py  llm.py  models.py  providers.py  runtime.py  skill.py  types.py  util.py
surfkit/auth/: default.py  key.py  provider.py  transport.py
surfkit/cli/: init.py  main.py  new.py  util.py  view.py
surfkit/cli/templates/: agent.py
surfkit/cli/templates/agents/: base.py  surf4v.py  surfskelly.py
surfkit/db/: conn.py  models.py
surfkit/docs/: providers.md
surfkit/examples/: config.json
surfkit/func/: img.py
surfkit/learn/: app.py  base.py
surfkit/prompt/: annots.py
surfkit/runtime/agent/: base.py  docker.py  hub.py  kube.py  load.py  process.py  util.py
surfkit/runtime/container/: base.py  docker.py  kube.py  load.py
surfkit/runtime/vm/: base.py
surfkit/server/: models.py  routes.py
ui/surfkit/: Dockerfile  Makefile  package-lock.json  package.json
ui/surfkit/public/: index.html
ui/surfkit/src/: App.js
ui/surfkit/src/api/: Tasks.js  agentd.js
ui/surfkit/src/components/: Layout.js  Nav.js  Recording.js  RoleThread.js  RoleThreads.js  Task.js
ui/surfkit/src/pages/: ContainerDesktopPage.js  DesktopPage.js
ui/surfkit/src/server/: Routes.js
