[tool.poetry]
name = "surfkit"
version = "0.1.22"
description = "A toolkit to build GUI surfing AI agents"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
threadmem = "^0.2.11"
rootpath = "^0.1.1"
litellm = "^1.34.27"
docker = "^7.0.0"
namesgenerator = "^0.3"
pyyaml = "^6.0.1"
toolfuse = "^0.1.13"
agentdesk = "^0.2.46"
devicebay = "^0.1.1"
taskara = "^0.1.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
surfkit = "surfkit.main:app"