[tool.poetry]
name = "surfkit"
version = "0.1.172"
description = "A toolkit for building AI agents that use devices"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
threadmem = "^0.2.11"
rootpath = "^0.1.1"
docker = "^7.0.0"
namesgenerator = "^0.3"
pyyaml = "^6.0.1"
toolfuse = "^0.1.15"
kubernetes = "^29.0.0"
devicebay = "^0.1.11"
litellm = "^1.35.8"
tiktoken = "^0.6.0"
rich = "^13.7.1"
taskara = "^0.1.79"
agentdesk = "^0.2.78"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

black = "^24.4.2"
isort = "^5.13.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
surfkit = "surfkit.cli.main:app"
lint = "scripts.lint:main"